--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Micro+5&display=swap');
+
 @import "tailwindcss";
+@plugin "tailwindcss-animated";
 
 @theme {
   --font-pixel: "Micro 5"
